--- a/wp-content/themes/evie/assets/less/_global.less
+++ b/wp-content/themes/evie/assets/less/_global.less
@@ -79,6 +79,15 @@ body{
 	margin:0 auto;
 }
 
+.main-content-wrapper{
+	margin:0 auto;
+	float:none;
+}
+
+.noPadding{
+	padding:0;
+}
+
 //===============================================================================
 //===============================================================================
 // tablet
