--- a/wp-content/themes/evie/assets/less/main.less
+++ b/wp-content/themes/evie/assets/less/main.less
@@ -20,6 +20,8 @@
 @import "layouts/pages/_products";   // Product page styling
 @import "layouts/pages/_media";      // Media coverage page styling
 @import "layouts/pages/_promotion";  // Promotion page styling
+@import "layouts/pages/_blog";		 // Blog page styling
+@import "layouts/pages/_ingredient"; // Ingredient page styling
 @import "layouts/_posts";            // Post styling
 
 // Nav
