--- a/wp-content/themes/evie/assets/less/layouts/pages/_home.less
+++ b/wp-content/themes/evie/assets/less/layouts/pages/_home.less
@@ -3,6 +3,11 @@
 // Base
 //===============================================================================
 //===============================================================================
+.home{
+	.main{
+		padding-top: 100px;
+	}
+}
 
 .home-banner{
 	.owl-wrapper-outer{
@@ -91,6 +96,11 @@
 //===============================================================================
 //===============================================================================
 @media (min-width: @screen-sm-min) {
+	.home{
+		.main{
+			padding-top: 150px;
+		}
+	}
 	.promotion-banner{
 		.well-feature{
 			background-size:cover;
