--- a/wp-content/themes/evie/assets/less/layouts/pages/_promotion.less
+++ b/wp-content/themes/evie/assets/less/layouts/pages/_promotion.less
@@ -39,14 +39,22 @@
 				font-family: "PlayfairDisplay";
 			}
 			h3{
-				font-size:17.5px;
+				font-size:17.6px;
 				margin-top:0;
-				font-weight:bold;
+				font-family: "Aileron";
+				font-weight: 600;
+				letter-spacing: 1px;
 			}
 		}
 		.promotion_1_content{
 			width:80%;
 			margin:0 auto;
+			font-size: 13px;
+			p em{
+				font-family: "PlayfairDisplay";
+				font-style: normal;
+				font-weight: 400;
+			}
 		}
 		.promotion_1_image{
 			img{
@@ -63,7 +71,8 @@
 		h3{
 			font-size:16px;
 			margin-top:0;
-			font-weight:bold;
+			font-family: "Aileron";
+			font-weight: 600;
 		}
 		.promotion_content_container{
 			width:80%;
@@ -75,12 +84,14 @@
 	}
 	
 	.more-special-title{
-		font-size:20px;
+		font-size:22px;
 		text-transform:uppercase;
-		font-weight:bold;	
 		width:100%;
 		text-align:center;
 		margin-bottom:50px;
+		  font-family: "Novecento";
+  font-weight: 600;
+  letter-spacing: 4px;
 	}
 }
 
