--- a/wp-content/themes/evie/assets/less/_global.less
+++ b/wp-content/themes/evie/assets/less/_global.less
@@ -11,7 +11,7 @@ body{
 }
 
 .main{
-	padding-top:110px;
+	padding-top:50px;
 }
 
 .breadcrumb-container{
@@ -58,11 +58,15 @@ body{
 	}
 	.headline-title-center{
 		height:51px;
-		font-size:20px;
+		font-size: 15px;
+  		padding: 6px 0 0;
+		/*font-size:22px;*/
 		line-height:240%;
-		font-weight:bold;
 		text-transform:uppercase;
 		text-align:center;
+		font-family: "Novecento";
+		font-weight: 600;
+		letter-spacing: 4px;
 		background:url(../img/sprites/bg_bestseller.png) no-repeat center;
 	}
 	.headline-title-right{
@@ -94,7 +98,15 @@ body{
 //===============================================================================
 //===============================================================================
 @media (min-width: @screen-sm-min) {
+	.main{
+		padding-top:150px;
+	}
 
+	.headline-title-container .headline-title-center{
+		font-size: 22px;
+		  padding-top: inherit;
+  		padding-bottom: inherit;
+	}
 }
 
 //===============================================================================
@@ -104,7 +116,7 @@ body{
 //===============================================================================
 @media (min-width: @screen-md-min) {
 	.main{
-		padding-top:165px;
+		  padding-top: 150px;
 	}
 	div.col-sm-7.five-three {
     	width: 60% !important;
