--- a/wp-content/themes/evie/assets/less/font.less
+++ b/wp-content/themes/evie/assets/less/font.less
@@ -105,3 +105,27 @@
   font-weight: 200;
   font-style: normal;
 }
+
+@font-face {
+  //light italic
+  font-family: 'Aileron';
+  src: url('../fonts/aileron-lightitalic-webfont.eot'); /* IE9 Compat Modes */
+  src: url('../fonts/aileron-lightitalic-webfont.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../fonts/aileron-lightitalic-webfont.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/aileron-lightitalic-webfont.woff') format('woff'), /* Pretty Modern Browsers */
+       url('../fonts/aileron-lightitalic-webfont.ttf')  format('truetype'); /* Safari, Android, iOS */
+  font-weight: 200;
+  font-style: italic;
+}
+
+@font-face {
+  //semi bold
+  font-family: 'Aileron';
+  src: url('../fonts/aileron-semibold-webfont.eot'); /* IE9 Compat Modes */
+  src: url('../fonts/aileron-semibold-webfont.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../fonts/aileron-semibold-webfont.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/aileron-semibold-webfont.woff') format('woff'), /* Pretty Modern Browsers */
+       url('../fonts/aileron-semibold-webfont.ttf')  format('truetype'); /* Safari, Android, iOS */
+  font-weight: 600;
+  font-style: normal;
+}
