--- a/wp-content/themes/evie/assets/less/layouts/pages/_blog.less
+++ b/wp-content/themes/evie/assets/less/layouts/pages/_blog.less
@@ -14,8 +14,6 @@
 			background:url(../img/sprites/bg_blog_title_left.png) no-repeat left;
 		}
 		.headline-title-center{
-			font-size: 23px;
-			font-weight: bold;
 			height: 110px;
 			letter-spacing: 3px;
 			line-height: 480%;
@@ -34,8 +32,11 @@
 			text-align:left;
 			a{
 				display:inline-block;
-				margin-right:15px;
+				margin-right:13px;
 				color:#000;
+				font-family: "Novecento";
+				font-weight: 300;
+				letter-spacing: 1px;
 				&:hover{
 					text-decoration:none;
 				}
@@ -52,10 +53,13 @@
 		.blog-post-title{
 			text-align:center;
 			font-family: "PlayfairDisplay";
-			font-weight:bold;
+			font-weight:400;
 			margin-bottom:25px;
 			h2{
 				font-size:37px;
+			}
+			p{
+				font-size: 14px;
 			}
 		}
 		.img-link{
@@ -73,11 +77,13 @@
 			margin-bottom:35px;
 			p{
 				margin-bottom:0;
+				font-size: 14px;
 			}
 			strong{
 				display:block;
 				font-family: "PlayfairDisplay";
 				font-size:14px;
+				font-weight: 400;
 			}
 		}
 		.blog-post-excerpt{
