--- a/wp-content/themes/evie/assets/less/_global.less
+++ b/wp-content/themes/evie/assets/less/_global.less
@@ -92,6 +92,29 @@ body{
 	padding:0;
 }
 
+.term-description{
+	text-align:center;
+	margin-bottom:40px;
+}
+
+#connect-popup{
+	position:absolute;
+	background:#F1F1F1;
+	-webkit-box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.6);
+	-moz-box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.6);
+	box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.6);
+	width:520px;
+	//height:220px;
+	padding:40px;
+	top:30%;
+	left:50%;
+	margin-left:-260px;
+	text-align:center;
+	h2{
+		text-transform:uppercase;
+	}
+}
+
 //===============================================================================
 //===============================================================================
 // tablet
