--- a/wp-content/themes/evie/assets/css/main.css
+++ b/wp-content/themes/evie/assets/css/main.css
@@ -7071,6 +7071,25 @@ body {
 .noPadding {
   padding: 0;
 }
+.term-description {
+  text-align: center;
+  margin-bottom: 40px;
+}
+#connect-popup {
+  position: absolute;
+  background: #F1F1F1;
+  -webkit-box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.6);
+  box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.6);
+  width: 520px;
+  padding: 40px;
+  top: 30%;
+  left: 50%;
+  margin-left: -260px;
+  text-align: center;
+}
+#connect-popup h2 {
+  text-transform: uppercase;
+}
 @media (min-width: 768px) {
   .main {
     padding-top: 165px;
@@ -7300,6 +7319,13 @@ footer .copyright a {
   .promotion-banner .well-feature {
     height: 323px;
   }
+}
+.product-category-section {
+  margin-top: 40px;
+  text-align: center;
+}
+.product-category-section .headline-title-container {
+  margin-bottom: 10px;
 }
 .single-product .product .product-title {
   padding-bottom: 5px;
