--- a/wp-content/themes/evie/assets/less/layouts/pages/_home.less
+++ b/wp-content/themes/evie/assets/less/layouts/pages/_home.less
@@ -104,7 +104,7 @@
 	.promotion-banner{
 		.well-feature{
 			background-size:cover;
-			height:201px;
+			height:158px;
 		}
 		.well[href]{
 			cursor:pointer;
@@ -128,7 +128,7 @@
 	.promotion-banner{
 		.well-feature{
 			background-size:cover;
-			height:265px;
+			height:211px;
 		}
 	}
 }
@@ -142,12 +142,12 @@
 	.home-banner{
 		&.container{
 			width:100%;
-			max-width:1360px;
+			//max-width:1360px;
 		}
 	}
 	.promotion-banner{
 		.well-feature{
-			height:323px;
+			height:260px;
 		}
 	}
 }
