--- a/wp-content/themes/evie/assets/css/main.css
+++ b/wp-content/themes/evie/assets/css/main.css
@@ -7076,7 +7076,7 @@ body {
   margin-bottom: 40px;
 }
 #connect-popup {
-  position: absolute;
+  position: fixed;
   background: #F1F1F1;
   -webkit-box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.6);
   box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.6);
@@ -7089,6 +7089,26 @@ body {
 }
 #connect-popup h2 {
   text-transform: uppercase;
+  font-family: "Novecento";
+}
+#connect-popup input[type=email] {
+  border: medium none;
+  height: 56px;
+  line-height: 100%;
+  margin-right: 10px;
+  padding: 0 20px;
+  width: 70%;
+}
+#connect-popup input[type=submit] {
+  background: #f6d8d3 none repeat scroll 0 0;
+  border: medium none;
+  font-family: "Novecento";
+  font-size: 19px;
+  font-weight: 700;
+  height: 56px;
+  letter-spacing: 2px;
+  line-height: 100%;
+  padding: 0 20px;
 }
 @media (min-width: 768px) {
   .main {
@@ -7173,6 +7193,7 @@ footer .footer-link-container .footer_link:first-child > li > a {
 }
 footer .footer-link-container .footer_link li {
   list-style: none;
+  margin-right: 4%!important;
 }
 footer .footer-link-container .footer_link li a {
   color: #000;
@@ -7292,7 +7313,7 @@ footer .copyright a {
   .promotion-banner .well-feature {
     -webkit-background-size: cover;
             background-size: cover;
-    height: 201px;
+    height: 158px;
   }
   .promotion-banner .well[href] {
     cursor: pointer;
@@ -7308,16 +7329,15 @@ footer .copyright a {
   .promotion-banner .well-feature {
     -webkit-background-size: cover;
             background-size: cover;
-    height: 265px;
+    height: 211px;
   }
 }
 @media (min-width: 1200px) {
   .home-banner.container {
     width: 100%;
-    max-width: 1360px;
   }
   .promotion-banner .well-feature {
-    height: 323px;
+    height: 260px;
   }
 }
 .product-category-section {
@@ -7750,6 +7770,44 @@ ul.products li.product .find-out-more {
 }
 .ingredient-section .ingredient-item-container .ingreditent-row .ingredient-content h2:after {
   margin-left: 5px;
+}
+.story-section {
+  margin-top: 40px;
+  padding-bottom: 50px;
+}
+.story-section .feature-image {
+  margin-bottom: 50px;
+}
+.story-section .headline-content {
+  text-align: center;
+  margin-bottom: 50px;
+}
+.story-section .headline-content h2 {
+  font-family: "PlayfairDisplay";
+  font-size: 23px;
+}
+.story-section .col-pattern {
+  background: url(../img/section_bg.png) repeat-y;
+  padding-bottom: 1000px;
+  margin-bottom: -980px;
+}
+.story-section .right-content h3,
+.story-section .right-content h4 {
+  font-family: "PlayfairDisplay";
+}
+.story-section .right-content h4 {
+  margin-bottom: 20px;
+}
+.story-section .right-content p {
+  font-size: 13px;
+}
+@media (min-width: 992px) {
+  .story-section .col-same-height {
+    height: 100%;
+    float: none;
+    display: table-cell;
+    overflow: hidden;
+  }
 }
 .navbar-default {
   background: #fff;
