--- a/wp-content/themes/evie/assets/less/_global.less
+++ b/wp-content/themes/evie/assets/less/_global.less
@@ -98,7 +98,7 @@ body{
 }
 
 #connect-popup{
-	position:absolute;
+	position:fixed;
 	background:#F1F1F1;
 	-webkit-box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.6);
 	-moz-box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.6);
@@ -112,6 +112,26 @@ body{
 	text-align:center;
 	h2{
 		text-transform:uppercase;
+		font-family: "Novecento";
+	}
+	input[type=email]{
+		border: medium none;
+		height: 56px;
+		line-height: 100%;
+		margin-right: 10px;
+		padding: 0 20px;
+		width: 70%;
+	}
+	input[type=submit]{
+		background: #f6d8d3 none repeat scroll 0 0;
+		border: medium none;
+		font-family: "Novecento";
+		font-size: 19px;
+		font-weight: 700;
+		height: 56px;
+		letter-spacing: 2px;
+		line-height: 100%;
+		padding: 0 20px;
 	}
 }
 
