--- a/wp-content/themes/evie/assets/less/_global.less
+++ b/wp-content/themes/evie/assets/less/_global.less
@@ -135,6 +135,28 @@ body{
 	}
 }
 
+.main-section-container{
+	margin-top:40px;
+	padding-bottom:50px;
+}
+
+.pagination{
+	width:100%;
+	text-transform:uppercase;	
+	color:#999A9E;
+	font-size:15px;
+	.next{
+		float:right;
+	}
+	.previous{
+		float:left;
+	}
+	a{
+		color:#000;
+		
+	}
+}
+
 //===============================================================================
 //===============================================================================
 // tablet
