--- a/wp-content/themes/evie/assets/less/layouts/pages/_ingredient.less
+++ b/wp-content/themes/evie/assets/less/layouts/pages/_ingredient.less
@@ -6,7 +6,7 @@
 
 .ingredient-section{
 	text-align:center;
-	margin-top:40px;
+	/*margin-top:40px;*/
 	.ingredient-item-container{
 		.ingreditent-row{
 			margin-bottom:40px;
