--- a/wp-content/themes/evie/assets/less/layouts/pages/_blog.less
+++ b/wp-content/themes/evie/assets/less/layouts/pages/_blog.less
@@ -5,7 +5,7 @@
 //===============================================================================
 
 .blog-section{
-	padding-top:40px;
+	/*padding-top:40px;*/
 	.headline-title-container{
 		background:url(../img/sprites/bg_blog_title.png) no-repeat center;
 		margin-bottom:20px;
@@ -49,7 +49,11 @@
 	.blog-post-item{
 		border-bottom:1px solid #918F90;
 		padding-bottom:30px;
-		margin-bottom:50px;
+		//margin-bottom:50px;
+		margin-top:50px;
+		&:first-child{
+			margin-top:0;
+		}
 		.blog-post-title{
 			text-align:center;
 			font-family: "PlayfairDisplay";
