--- a/wp-content/themes/evie/assets/less/layouts/pages/_media.less
+++ b/wp-content/themes/evie/assets/less/layouts/pages/_media.less
@@ -6,7 +6,7 @@
 
 .media-coverage-section{
 	text-align:center;
-	margin-top:40px;
+	/*margin-top:40px;*/
 	.media-item-container{
 		margin-bottom:40px;
 		.img-responsive{
