--- a/wp-content/themes/evie/assets/less/layouts/pages/_products.less
+++ b/wp-content/themes/evie/assets/less/layouts/pages/_products.less
@@ -5,7 +5,7 @@
 //===============================================================================
 
 .product-category-section{
-	margin-top:40px;
+	/*margin-top:40px;*/
 	text-align:center;
 	.headline-title-container{
 		margin-bottom:10px;
