--- a/wp-content/themes/evie/assets/less/layouts/pages/_promotion.less
+++ b/wp-content/themes/evie/assets/less/layouts/pages/_promotion.less
@@ -6,8 +6,8 @@
 
 .promotion-section{
 	text-align:center;
-	margin-top:40px;
-	padding-bottom:40px;
+	/*margin-top:40px;
+	padding-bottom:40px;*/
 	.headline-title-container{
 		margin-bottom:10px;
 	}
