--- a/wp-content/themes/evie/assets/css/main.css
+++ b/wp-content/themes/evie/assets/css/main.css
@@ -7086,6 +7086,7 @@ body {
   left: 50%;
   margin-left: -260px;
   text-align: center;
+  z-index: 1040;
 }
 #connect-popup h2 {
   text-transform: uppercase;
@@ -7093,7 +7094,7 @@ body {
 }
 #connect-popup input[type=email] {
   border: medium none;
-  height: 56px;
+  height: 46px;
   line-height: 100%;
   margin-right: 10px;
   padding: 0 20px;
@@ -7105,7 +7106,7 @@ body {
   font-family: "Novecento";
   font-size: 19px;
   font-weight: 700;
-  height: 56px;
+  height: 46px;
   letter-spacing: 2px;
   line-height: 100%;
   padding: 0 20px;
@@ -7213,6 +7214,7 @@ footer .footer-link-container .footer_link:first-child > li > a {
 footer .footer-link-container .footer_link li {
   list-style: none;
   margin-right: 4%!important;
+  text-align: center;
 }
 footer .footer-link-container .footer_link li a {
   color: #000;
@@ -7234,6 +7236,11 @@ footer .copyright span {
 }
 footer .copyright a {
   color: #000;
+}
+@media (min-width: 768px) {
+  footer .footer-link-container .footer_link li {
+    text-align: left;
+  }
 }
 @media (min-width: 992px) {
   footer .social-link-container {
@@ -7540,6 +7547,26 @@ ul.products li.product .find-out-more {
   .single-product ul.products li.product:last-child {
     margin-right: 0!important;
   }
+  .woocommerce #content div.product div.images,
+  .woocommerce div.product div.images,
+  .woocommerce-page #content div.product div.images,
+  .woocommerce-page div.product div.images {
+    margin-top: 75px;
+  }
+}
+@media (min-width: 1200px) {
+  .woocommerce #content div.product div.summary,
+  .woocommerce div.product div.summary,
+  .woocommerce-page #content div.product div.summary,
+  .woocommerce-page div.product div.summary {
+    padding-right: 8.33%;
+  }
+  .woocommerce #content div.product div.images,
+  .woocommerce div.product div.images,
+  .woocommerce-page #content div.product div.images,
+  .woocommerce-page div.product div.images {
+    padding-left: 8.33%;
+  }
 }
 .media-coverage-section {
   text-align: center;
@@ -7807,6 +7834,7 @@ ul.products li.product .find-out-more {
 .two-col-section .headline-content h2 {
   font-family: "PlayfairDisplay";
   font-size: 23px;
+  line-height: 130%;
 }
 .two-col-section .col-pattern {
   background: url(../img/section_bg.png) repeat-y;
@@ -7819,27 +7847,37 @@ ul.products li.product .find-out-more {
 .two-col-section .right-content h3,
 .two-col-section .right-content h4 {
   font-family: "PlayfairDisplay";
+  line-height: 150%;
 }
 .two-col-section .right-content h4 {
   margin-bottom: 20px;
+  font-size: 16px;
 }
 .two-col-section .right-content p {
   font-size: 13px;
+  line-height: 150%;
 }
 .contact-us .left-content {
   font-family: "PlayfairDisplay";
   text-align: right;
 }
 .contact-us .left-content h2 {
-  font-size: 40px;
+  font-size: 46px;
   margin-top: 0;
 }
 .contact-us .right-content {
   vertical-align: top;
 }
-.contact-us .right-content p {
+.contact-us .right-content p,
+.contact-us .right-content h3 {
   font-size: 16px;
   margin-bottom: 30px;
+}
+.contact-us .right-content h3 {
+  font-weight: 600;
+  font-family: "Aileron";
+  margin-bottom: 0;
+  margin-top: 0;
 }
 .contact-us .right-content a {
   color: #000;
@@ -7881,7 +7919,7 @@ ul.products li.product .find-out-more {
   padding: 0 50px 20px 50px;
 }
 .stocklist-section .stocklist-container .stocklist-row .stocklist-item h4 {
-  font-weight: bold;
+  font-weight: 600;
   text-transform: uppercase;
   font-size: 16px;
   margin-top: 0;
@@ -7890,8 +7928,10 @@ ul.products li.product .find-out-more {
 .stocklist-section .stocklist-container .stocklist-row .stocklist-item:first-child {
   border-right: 2px solid #C9C8C8;
 }
-.stocklist-section .stocklist-container .stocklist-row:last-child .stocklist-item {
-  padding-bottom: 0;
+@media (min-width: 768px) {
+  .stocklist-section .stocklist-container .stocklist-row:last-child .stocklist-item {
+    padding-bottom: 0;
+  }
 }
 .navbar-default {
   background: #fff;
