--- a/wp-content/themes/evie/assets/less/layouts/_footer.less
+++ b/wp-content/themes/evie/assets/less/layouts/_footer.less
@@ -29,6 +29,7 @@ footer{
 			li{
 				list-style:none;
 				margin-right:4%!important;
+				text-align: center;
 				a{
 					color:#000;
 					font-weight: 400;
@@ -62,7 +63,9 @@ footer{
 //===============================================================================
 //===============================================================================
 @media (min-width: @screen-sm-min) {
-
+	footer .footer-link-container .footer_link li{
+		text-align: left;
+	}
 }
 
 //===============================================================================
