--- a/wp-content/themes/evie/assets/less/layouts/pages/_2col.less
+++ b/wp-content/themes/evie/assets/less/layouts/pages/_2col.less
@@ -16,6 +16,7 @@
 		h2{
 			font-family: "PlayfairDisplay";
 			font-size:23px;
+			line-height: 130%;
 		}
 	}
 	
@@ -29,12 +30,15 @@
 		padding-right:50px;
 		h3, h4{
 			font-family: "PlayfairDisplay";
+			line-height: 150%;
 		}
 		h4{
 			margin-bottom:20px;
+			font-size: 16px;
 		}
 		p{
 			font-size:13px;
+			line-height: 150%;
 		}
 	}
 	
@@ -45,15 +49,21 @@
 		font-family: "PlayfairDisplay";
 		text-align:right;
 		h2{
-			font-size:40px;
+			font-size:46px;
 			margin-top:0;
 		}
 	}
 	.right-content{
 		vertical-align: top;
-		p{
+		p,h3{
 			font-size:16px;
 			margin-bottom:30px;
+		}
+		h3{
+			font-weight: 600;
+			font-family: "Aileron";
+			 margin-bottom: 0;
+			   margin-top: 0;
 		}
 		a{
 			color:#000;
